All around improvements

--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE HTML>
 <!--
-	Astral by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+	VitoJanko's portfolio
 -->
 <html>
 	<head>
@@ -47,10 +45,10 @@
 								
 								<p>
 									I have ten years of experience in working on different parts of data
-									analysis. From data-collecting, data pre-processing and feature extraction, to visualization, modeling and
+									analysis. From data-collecting, data pre-processing and feature extraction, to visualization, modeling
 									and machine learning.
 									
-									A full description of my education and expertise can be found in my CV here. 
+									A full description of my education and expertise can be found in my  <a href="./cv.html">CV</a>. 
 									Below I highlight a mix of personal and work-related projects.  
 								</p>
 								<section>
@@ -59,9 +57,9 @@
 											<a href="http://xprize-e9.ijs.si:5555/" class="image fit"><img src="images/XPRIZE.png" alt=""></a>
 											<p class="work_title"><b>Prescribing countermeasures against COVID-19</b></p>
 											<p class="work_text"> A system that can generate different intervention plans, and present their pros and cons to 
-																  a policy maker. Using this system, our team won the "XPRIZE: 250k$ Pandemic 
+																  a policy maker. Using this system, our team won the "XPRIZE: 500k$ Pandemic 
 																  Response Challenge".</p>
-											<p class="work_text"><b>Multi-objective optimization, epidemiology, dash, docker, pythony</b></p>
+											<p class="work_text"><b>Multi-objective optimization, epidemiology, dash, docker, python</b></p>
 											<p class="work_text"><b><a href="https://repo.ijs.si/covid/covid-xprize/">Repository</a></b> </p>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
@@ -69,16 +67,16 @@
 											<p class="work_title"><b>COVID-19 epidemiological model</b></p>
 											<p class="work_text"> Visualisation of a Slovenia-specific epidemiological model, showing the effect of 
 																   vaccination, crowd immunity, hospital capacity and population age. <br> &#8205;</p>
-											<p class="work_text"><b>Epidemiology, heroku, tablau, html, python</b></p>
-											<p class="work_text"><b><a href="https://gitlab.com/jbizi/game-dev/hunted-seas">Repository</a></b> </p>
+											<p class="work_text"><b>Epidemiology, heroku, tableau, html, python</b></p>
+											<p class="work_text"><b><a href="https://repo.ijs.si/vitojanko/covid_longterm">Repository</a></b> </p>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
 											<a href="https://abc-research.github.io/cook2020/" class="image fit"><img src="images/cooking.png" alt=""></a>
 											<p class="work_title"><b>Cooking challenge <br> &#8205;</b></p>
 											<p class="work_text"> An international data-science competition, where the goal was to analyze data from motion capture sensors to 
 															      determine the recepie being prepared. On this competition we achieved first place. </p>
-											<p class="work_text"><b>Hidden Markov Models, Unity, C#, sci-kit learn, python</b></p>
-											<p class="work_text"><b><a href="https://repo.ijs.si/clementpicard/cookinganimation">Repository</a></b> </p>
+											<p class="work_text"><b>Hidden Markov Models, Unity, C#, scikit-learn, python</b></p>
+											<p class="work_text"><b><a href="https://repo.ijs.si/vitojanko/cookinganimation">Repository</a></b> </p>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
 											<a href="https://pypi.org/project/cr-features/" class="image fit"><img src="images/body2.png" alt=""></a>
@@ -103,7 +101,7 @@
 											<p class="work_title"><b>WideHealth winter school<br> &#8205; </b></p>
 											<p class="work_text"> I was a presenter at the WideHealth winter school and co-organizer of a data competition hosted there. Created and presented 
 																  easy-to-use juypter scripts that lead you through the activity recognition process. <br> &#8205;<br> &#8205;</p>
-											<p class="work_text"><b>Jupyter notebook, sci-kit learn, python, kaggle</b> </p>
+											<p class="work_text"><b>Jupyter notebook, scikit-learn, python, kaggle</b> </p>
 											<p class="work_text"><b><a href="https://www.kaggle.com/competitions/winter-school-2022-ar-challenge">Kaggle</a></b> </p>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
@@ -115,7 +113,7 @@
 											<p class="work_text"><b><a href="https://repo.ijs.si/vitojanko/ProgressiveChess">Repository</a></b> </p>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/robot.png" alt=""></a>
+											<a href="https://www.dline.info/ed/fulltext/v7n2/edv7n2_3.pdf" class="image fit"><img src="images/robot.png" alt=""></a>
 											<p class="work_title"><b>AI for Briskula</b></p>
 											<p class="work_text"> A system for playing Briskula card game. This system included three components: computer vision to detect cards, 
 																  a robot arm that moves them, and an AI that can play the game at a super-human level. </p>
