Added last project

--- a/index.html
+++ b/index.html
@@ -63,10 +63,11 @@
 											<p class="work_text"><b><a href="https://repo.ijs.si/covid/covid-xprize/">Repository</a></b> </p>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" class="hov"></a>
+											<a href="https://public.tableau.com/app/profile/vito.janko/viz/Covid-19Dashboard_16546316809140/Dashboard1?publish=yes" class="image fit"><img src="images/tablu.png" alt="" class="hov"></a>
 											<p class="work_title"><b>COVID-19 epidemiological model</b></p>
 											<p class="work_text"> Visualisation of a Slovenia-specific epidemiological model that shows the effects of
-																   vaccination, crowd immunity, hospital capacity and population age. <br> &#8205;</p>
+																   vaccination, crowd immunity, hospital capacity and population age. Results are 
+																   stored in a dynamic dashboard. </p>
 											<p class="work_text"><b>Epidemiology, heroku, tableau, html, python</b></p>
 											<p class="work_text"><b><a href="https://repo.ijs.si/vitojanko/covid_longterm">Repository</a></b> </p>
 										</div>
